--- a/src/components/organisms/form/styles.module.css
+++ b/src/components/organisms/form/styles.module.css
@@ -1,7 +1,6 @@
 .form {
   display: flex;
   row-gap: var(--spacing-x02);
-  grid-area: full;
   flex-direction: column;
   justify-self: center;
   box-shadow: var(--box-shadow-01);
@@ -12,7 +11,6 @@
   max-width: 44.8rem;
 
   @media (width >= 768px) {
-    grid-area: content;
     padding: var(--spacing-x12);
   }
 
